rosliny spawnuja sie co ruch, zgodnie z tym jak zostalo wprowadzone ile ich ma rosnac co ruch